src/App.css
.text-link {
  color: black;
  text-decoration: none;
  border-bottom-color: black;
  border-bottom-style: solid;
  border-bottom-width: 0.0625em;
}

.font-link {
  font-family: "Ibarra Real Nova", serif;
}

.App {
  background-color: whitesmoke;
  font-family: "Ibarra Real Nova", serif;
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
}

.border {
  min-width: 25vw;
  background-color: whitesmoke;
  text-align: center;
}

.Main {
  height: 100vh;
  min-width: 50vw;
}

.App-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: black;
  padding-top: 15vmin;
  padding-bottom: 5vmin;
}

.text {
  font-size: calc(10px + 1vmin);
}

.stagger {
  padding-left: 5vmin;
}

.App-footer {
  text-align: center;
  background-color: whitesmoke;
  display: flex;
  flex-direction: column;
  padding-bottom: 5vmin;
  font-size: calc(10px + 1vmin);
  position: fixed;
  bottom: 0;
  width: 50%;
}

.Sections {
  display: flex;
  flex-direction: row;
  gap: calc(5px + 3vmin);
  justify-content: center;
}

.Icons-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: calc(1px + 2.5vmin);
  padding-top: 5vmin;
}

.Icons {
  height: calc(5px + 3vmin);
  width: calc(5px + 3vmin);
}

